5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1834_1278.log
== TEST (2019-06-27 14:25:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

print(distance_city[cityA,cityB])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:25:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

print(distance_city[cityA,cityB])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:30:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

x = distance_city[i,j]
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:34:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

x = distance_city[cityA,cityB]
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:35:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
i=(cityA%10)-1
j=(cityB%10)-1

x = distance_city[i,j]
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:52:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:57:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:58:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

print(distance_city[cityA,cityB])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:58:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

print(distance_city[cityA,cityB])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:58:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

print(distance_city[cityA,cityB])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:09:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:09:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
1.28308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
2.93687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
3.8825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
5.83226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.29126
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:10:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
1.79184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:10:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:10:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:10:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
3.61226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
4.97628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.51851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
9.31686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
9.99629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.95074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
7.30835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
7.21659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
7.427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.63204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:10:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.20703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:11:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.12464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:11:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.31047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:11:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.42578
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:11:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.64033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:11:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.61991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:11:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
6.60779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 17, in <module>
    distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
NameError: name 'distancia_city' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:15:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:15:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:16:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:16:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
1.00398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 16, in <module>
    distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
NameError: name 'distance' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:16:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
1.71222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 16, in <module>
    distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
NameError: name 'distance' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:16:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distance)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:17:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distance)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:17:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:17:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:19:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- EXECUTION TIME:
2.19568
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
cityA:cityB:cityB:cityB:cityB:cityB:cityB:50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
cityA:cityB:cityB:cityB:cityB:cityB:cityB:cityB:cityB:57
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:19:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- EXECUTION TIME:
3.3155
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
cityA:cityB:cityB:cityB:cityB:24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
cityA:cityB:cityB:cityB:cityB:cityB:cityB:50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
cityA:cityB:cityB:cityB:cityB:cityB:cityB:cityB:cityB:57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:19:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- EXECUTION TIME:
4.71543
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
cityA:cityB:cityB:cityB:cityB:cityB:cityB:50
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
cityA:cityB:cityB:cityB:cityB:cityB:cityB:cityB:cityB:57
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:19:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distance = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distance = distance_city[(cityA//100) - 1, (cityB//100) - 1] + distance
	cityA = cityB
	cityB = int(input("cityB:"))
print(distance)	




-- EXECUTION TIME:
1.1471
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
